[tool.poetry]
name = "parsy-tutorial"
version = "0.1.0"
description = "Learning parsy, a Python parser combinator (Parsec) package."
authors = ["Larry Jones <larry.jones@reveal-energy.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
parsy = "^1.3.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.16"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
